deploy: f8bd69e4388947ebd938a38765a5160ba04aae77

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h4 id="i-am-a-mathematician-math-educator-data-science--machine-learning-enthusiast">I am a Mathematician, Math Educator, Data Science &amp; Machine Learning Enthusiast.</h4>
+        <div class="home"><h4 id="i-am-a-mathematician-a-math-educator-and-a-data-science--machine-learning-enthusiast">I am a Mathematician, a Math Educator, and a Data Science &amp; Machine Learning Enthusiast.</h4>
 
 <h4 id="current-employment"><strong>Current Employment</strong></h4>
 <p>Junior Visitor     <br />
@@ -107,7 +107,7 @@ Pisa PI 56100, Italy</p>
 <br /></li>
 </ul>
 
-<h4 id="here-is-my-complete-cv-and-my-linkedin-profile-is-this-below-you-will-find-blog-posts-related-to-the-computational-side-of-mathematics-and-statistics-based-f3e2-python-julia-or-f4f7-r-during-my-free-time-i-travel-and-do-photography-some-of-these-photos-can-be-found-on-my-instagram"><a href="otherfiles/KasunFernandoCV.pdf"><strong>Here</strong></a> is my complete CV and my Linkedin profile is <a href="https://www.linkedin.com/in/abkfernando/"><strong>this</strong></a>. Below you will find blog posts related to the computational side of mathematics and statistics based &amp;#f3e2; python, julia or &amp;#f4f7; R. During my free time I travel and do photography. Some of these photos can be found on <a href="https://www.instagram.com/kasun.fernando/">my instagram</a>.</h4>
+<h4 id="here-is-my-complete-cv-and-my-linkedin-profile-is-this-below-you-will-find-blog-posts-related-to-the-computational-side-of-mathematics-and-statistics-based-on-python-julia-or-r-during-my-free-time-i-travel-and-do-photography-some-of-these-photos-can-be-found-on-my-instagram"><a href="otherfiles/KasunFernandoCV.pdf"><strong>Here</strong></a> is my complete CV and my Linkedin profile is <a href="https://www.linkedin.com/in/abkfernando/"><strong>this</strong></a>. Below you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R. During my free time I travel and do photography. Some of these photos can be found on my <a href="https://www.instagram.com/kasun.fernando/"><strong>instagram</strong></a>.</h4>
 <p><br /><br /></p>
 
 <h4 id="blog-posts"><strong>Blog Posts</strong></h4>
