--- a/Publications/index.html
+++ b/Publications/index.html
@@ -87,9 +87,8 @@ window.onload = wrap_img;
 
 <details open="">
 <summary><a href="otherfiles/EdgeManyAtoms.pdf"><strong><em>An error term in the Central Limit Theorem for sums of discrete random variables.</em></strong></a> (with Dmitry Dolgopyat, 42 pp) (revisions submitted)</summary>                                    
-<p class="text-justify">We consider sums of independent identically distributed random variables those distributions have $d+1$ atoms. Such distributions never admit an Edgeworth expansion of order $d$ but we show that for almost all parameters the Edgeworth expansion of order $d-1$ is valid and the error of the order $d-1$ Edgeworth expansion is typically of order $n^{-d/2}$.</p>
+<p class="text-justify">We consider sums of independent identically distributed random variables those distributions have $d+1$ atoms. Such distributions never admit an Edgeworth expansion of order $d$ but we show that for almost all parameters the Edgeworth expansion of order $d-1$ is valid and the error of the order $d-1$ Edgeworth expansion is typically of order $n^{-d/2}$.</p><br />
 </details>
-
 <details>
 <summary><a href="https://arxiv.org/abs/2108.08461"><strong><em>The Bootstrap for dynamical systems</em></strong></a> (with Nan Zou, 69 pp) (submitted)</summary>    
 <p class="text-justify">Despite their deterministic nature, dynamical systems often exhibit seemingly random behaviour. Consequently, a dynamical system is usually represented by a probabilistic model of which the unknown parameters must be estimated using statistical methods. When measuring the uncertainty of such parameter estimation, the bootstrap stands out as a simple but powerful technique. In this paper, we develop the bootstrap for dynamical systems and establish not only its consistency but also its second-order efficiency via a novel continuous Edgeworth expansion for dynamical systems. Moreover, we verify the theoretical results about the bootstrap using computer simulations.</p>
@@ -117,7 +116,7 @@ proposed technique using experiments on both real-world and synthetic datasets.<
 <summary><a href="https://arxiv.org/abs/1907.11655"><strong><em>Higher order asymptotics for large deviations - Part II.</em></strong></a> (with Pratima Hebbar)<br />
 (Stochastics and Dynamics, 21(5) (2021) 21 pp: doi:10.1142/S0219493721500258)
 </summary>
-<br /><p class="text-justify">We obtain asymptotic expansions for the large deviation principle (LDP) for continuous time stochastic processes with weakly dependent increments. As a key example, we show that additive functionals of solutions of stochastic differential equations (SDEs) satisfying H&ouml;rmander condition on a <i>d</i>-dimensional compact manifold admit these asymptotic expansions of all orders.</p>
+<p class="text-justify">We obtain asymptotic expansions for the large deviation principle (LDP) for continuous time stochastic processes with weakly dependent increments. As a key example, we show that additive functionals of solutions of stochastic differential equations (SDEs) satisfying H&ouml;rmander condition on a <i>d</i>-dimensional compact manifold admit these asymptotic expansions of all orders.</p>
 </details>
 
 <details>
