--- a/Publications/index.html
+++ b/Publications/index.html
@@ -87,13 +87,14 @@ window.onload = wrap_img;
 
 <details open="">
 <summary><a href="otherfiles/EdgeManyAtoms.pdf"><strong><em>An error term in the Central Limit Theorem for sums of discrete random variables.</em></strong></a> (with Dmitry Dolgopyat, 42 pp) (revisions submitted)</summary>                                    
-<p class="text-justify">We consider sums of independent identically distributed random variables those distributions have $d+1$ atoms. Such distributions never admit an Edgeworth expansion of order $d$ but we show that for almost all parameters the Edgeworth expansion of order $d-1$ is valid and the error of the order $d-1$ Edgeworth expansion is typically of order $n^{-d/2}$.</p><br />
+<p class="text-justify">We consider sums of independent identically distributed random variables those distributions have $d+1$ atoms. Such distributions never admit an Edgeworth expansion of order $d$ but we show that for almost all parameters the Edgeworth expansion of order $d-1$ is valid and the error of the order $d-1$ Edgeworth expansion is typically of order $n^{-d/2}$.</p>
 </details>
+<p> </p>
 <details>
 <summary><a href="https://arxiv.org/abs/2108.08461"><strong><em>The Bootstrap for dynamical systems</em></strong></a> (with Nan Zou, 69 pp) (submitted)</summary>    
 <p class="text-justify">Despite their deterministic nature, dynamical systems often exhibit seemingly random behaviour. Consequently, a dynamical system is usually represented by a probabilistic model of which the unknown parameters must be estimated using statistical methods. When measuring the uncertainty of such parameter estimation, the bootstrap stands out as a simple but powerful technique. In this paper, we develop the bootstrap for dynamical systems and establish not only its consistency but also its second-order efficiency via a novel continuous Edgeworth expansion for dynamical systems. Moreover, we verify the theoretical results about the bootstrap using computer simulations.</p>
 </details>
-
+<p> </p>
 <details>
 <summary><a href="https://arxiv.org/abs/2102.03509"><strong><em>Robust normalizing flows using Bernstein-type polynomials.</em></strong></a> (with Sameera Ramasinghe, 15 pp) (submitted)</summary>   
 <p class="text-justify">Normalizing flows (NFs) are a class of generative models that allows exact density evaluation and sampling. We propose a framework to construct NFs based on increasing triangular maps and Bernstein-type polynomials. Compared to the existing (universal) NF frameworks, our method provides compelling advantages like theoretical upper bounds for the approximation error, robustness, higher interpretability, suitability for compactly supported densities, and the ability to employ higher degree polynomials without training instability. Moreover, we provide a constructive universality proof, which gives analytic expressions of the approximations for known transformations. We conduct a thorough theoretical analysis and empirically demonstrate the efficacy of the
