--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ search_exclude: true
 #### I am a Mathematician, a Math Educator, and a Data Science & Machine Learning Enthusiast. 
 
 #### **Current Employment**
-Junior Visitor       
+#### Junior Visitor       
 Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->             
 Scuola Normale Superiore        
 Piazza dei Cavalieri, 3           
