deploy: 2c07321281ab7fb84004412c00dafffc633d6b86

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ window.onload = wrap_img;
         <div class="home"><h4 id="i-am-a-mathematician-a-math-educator-and-a-data-science--machine-learning-enthusiast">I am a Mathematician, a Math Educator, and a Data Science &amp; Machine Learning Enthusiast.</h4>
 
 <h4 id="current-employment"><strong>Current Employment</strong></h4>
-<p>Junior Visitor     <br />
-Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->           <br />
+<h4 id="junior-visitor">Junior Visitor</h4>
+<p>Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->           <br />
 Scuola Normale Superiore      <br />
 Piazza dei Cavalieri, 3         <br />
 Pisa PI 56100, Italy</p>
