--- a/index.html
+++ b/index.html
@@ -14,17 +14,12 @@ Pisa PI 56100, Italy
 Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it</a>     
 
 #### **Past Employment**
-#### stdoctoral Fellow 
-University of Toronto (August 2018 - July 2021)
+- Postdoctoral Fellow, University of Toronto (August 2018 - July 2021)
 	
 #### **Education**
-
-#### PhD in Mathematics      
-University of Maryland (August 2018)
-#### MA in Mathematics     
-University of Maryland (December 2016)   
-#### BSc in Mathematics         
-University of Colombo (January 2014)      
+- PhD in Mathematics, University of Maryland (August 2018)
+- MA in Mathematics, University of Maryland (December 2016)   
+- BSc in Mathematics, University of Colombo (January 2014)      
 <br>
 
 #### [**Here**](otherfiles/KasunFernandoCV.pdf) is my complete CV and my Linkedin profile is [**this**](https://www.linkedin.com/in/abkfernando/). Below you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R. 
