deploy: cf80978f944c99f343a2eff1d02a24560d3bf392

--- a/index.html
+++ b/index.html
@@ -95,18 +95,17 @@ Pisa PI 56100, Italy</p>
 <p>Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it</a></p>
 
 <h4 id="past-employment"><strong>Past Employment</strong></h4>
-<h4 id="stdoctoral-fellow">stdoctoral Fellow</h4>
-<p>University of Toronto (August 2018 - July 2021)</p>
+<ul>
+  <li>Postdoctoral Fellow, University of Toronto (August 2018 - July 2021)</li>
+</ul>
 
 <h4 id="education"><strong>Education</strong></h4>
-
-<h4 id="phd-in-mathematics">PhD in Mathematics</h4>
-<p>University of Maryland (August 2018)</p>
-<h4 id="ma-in-mathematics">MA in Mathematics</h4>
-<p>University of Maryland (December 2016)</p>
-<h4 id="bsc-in-mathematics">BSc in Mathematics</h4>
-<p>University of Colombo (January 2014)    <br />
-<br /></p>
+<ul>
+  <li>PhD in Mathematics, University of Maryland (August 2018)</li>
+  <li>MA in Mathematics, University of Maryland (December 2016)</li>
+  <li>BSc in Mathematics, University of Colombo (January 2014)    <br />
+<br /></li>
+</ul>
 
 <h4 id="here-is-my-complete-cv-and-my-linkedin-profile-is-this-below-you-will-find-blog-posts-related-to-the-computational-side-of-mathematics-and-statistics-based-on-python-julia-or-r"><a href="otherfiles/KasunFernandoCV.pdf"><strong>Here</strong></a> is my complete CV and my Linkedin profile is <a href="https://www.linkedin.com/in/abkfernando/"><strong>this</strong></a>. Below you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R.</h4>
 
