--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it<
 - BSc in Mathematics, University of Colombo (January 2014)      
 <br>
 
-#### [**Here**](otherfiles/KasunFernandoCV.pdf) is my complete CV and my Linkedin profile is [**this**](https://www.linkedin.com/in/abkfernando/). Below you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R. 
+#### [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV and for my Linkedin profile, please follow [this link](https://www.linkedin.com/in/abkfernando/). Below you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R. 
 
-#### During my free time I travel and do photography. Some of these photos can be found on my [**instagram**](https://www.instagram.com/kasun.fernando/).
+#### During my free time I travel and do photography. Some of these photos can be found on my [instagram](https://www.instagram.com/kasun.fernando/).
 <br>
 #### **Blog Posts**  
