--- a/index.html
+++ b/index.html
@@ -2,28 +2,14 @@
 layout: home
 search_exclude: true
 ---
-#### I am a Mathematician, a Math Educator, and a Data Science & Machine Learning Enthusiast. 
+<img align="center" src="images/kasun.jpg"> 
 
-#### **Current Employment**
-#### Junior Visitor       
-Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->             
-Scuola Normale Superiore        
-Piazza dei Cavalieri, 3           
-Pisa PI 56100, Italy         
+#### I am a Mathematician, a Math Educator, and a Data Science & Machine Learning Enthusiast. I am currently a junior visitor at the Centro di Ricerca Matematica Ennio De Giorgi, Scuola Normale Superiore di Pisa. I completed my Ph.D. in Mathematics at the University of Maryland under the supervision of Dmitry Dolgopyat in August 2018 and was a postdoctoral fellow at the University of Toronto until July 2021.      
 
-Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it</a>     
+#### [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV and for my Linkedin profile, please follow [this link](https://www.linkedin.com/in/abkfernando/). 
 
-#### **Past Employment**
-- Postdoctoral Fellow, University of Toronto (August 2018 - July 2021)
-	
-#### **Education**
-- PhD in Mathematics, University of Maryland (August 2018)
-- MA in Mathematics, University of Maryland (December 2016)   
-- BSc in Mathematics, University of Colombo (January 2014)      
+#### During my free time, I like to travel and do photography. Some of these photos can be found on my [instagram](https://www.instagram.com/kasun.fernando/).
+
+#### Below, you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R (work in progress). 
 <br>
 
-#### [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV and for my Linkedin profile, please follow [this link](https://www.linkedin.com/in/abkfernando/). Below you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R. 
-
-#### During my free time I travel and do photography. Some of these photos can be found on my [instagram](https://www.instagram.com/kasun.fernando/).
-<br>
-#### **Blog Posts**  
