--- a/index.html
+++ b/index.html
@@ -83,35 +83,17 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h4 id="i-am-a-mathematician-a-math-educator-and-a-data-science--machine-learning-enthusiast">I am a Mathematician, a Math Educator, and a Data Science &amp; Machine Learning Enthusiast.</h4>
+        <div class="home"><p><img align="center" src="images/kasun.jpg" /></p>
 
-<h4 id="current-employment"><strong>Current Employment</strong></h4>
-<h4 id="junior-visitor">Junior Visitor</h4>
-<p>Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->           <br />
-Scuola Normale Superiore      <br />
-Piazza dei Cavalieri, 3         <br />
-Pisa PI 56100, Italy</p>
+<h4 id="i-am-a-mathematician-a-math-educator-and-a-data-science--machine-learning-enthusiast-i-am-currently-a-junior-visitor-at-the-centro-di-ricerca-matematica-ennio-de-giorgi-scuola-normale-superiore-di-pisa-i-completed-my-phd-in-mathematics-at-the-university-of-maryland-under-the-supervision-of-dmitry-dolgopyat-in-august-2018-and-was-a-postdoctoral-fellow-at-the-university-of-toronto-until-july-2021">I am a Mathematician, a Math Educator, and a Data Science &amp; Machine Learning Enthusiast. I am currently a junior visitor at the Centro di Ricerca Matematica Ennio De Giorgi, Scuola Normale Superiore di Pisa. I completed my Ph.D. in Mathematics at the University of Maryland under the supervision of Dmitry Dolgopyat in August 2018 and was a postdoctoral fellow at the University of Toronto until July 2021.</h4>
 
-<p>Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it</a></p>
+<h4 id="here-is-my-complete-cv-and-for-my-linkedin-profile-please-follow-this-link"><a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV and for my Linkedin profile, please follow <a href="https://www.linkedin.com/in/abkfernando/">this link</a>.</h4>
 
-<h4 id="past-employment"><strong>Past Employment</strong></h4>
-<ul>
-  <li>Postdoctoral Fellow, University of Toronto (August 2018 - July 2021)</li>
-</ul>
+<h4 id="during-my-free-time-i-like-to-travel-and-do-photography-some-of-these-photos-can-be-found-on-my-instagram">During my free time, I like to travel and do photography. Some of these photos can be found on my <a href="https://www.instagram.com/kasun.fernando/">instagram</a>.</h4>
 
-<h4 id="education"><strong>Education</strong></h4>
-<ul>
-  <li>PhD in Mathematics, University of Maryland (August 2018)</li>
-  <li>MA in Mathematics, University of Maryland (December 2016)</li>
-  <li>BSc in Mathematics, University of Colombo (January 2014)    <br />
-<br /></li>
-</ul>
-
-<h4 id="here-is-my-complete-cv-and-for-my-linkedin-profile-please-follow-this-link-below-you-will-find-blog-posts-related-to-the-computational-side-of-mathematics-and-statistics-based-on-python-julia-or-r"><a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV and for my Linkedin profile, please follow <a href="https://www.linkedin.com/in/abkfernando/">this link</a>. Below you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R.</h4>
-
-<h4 id="during-my-free-time-i-travel-and-do-photography-some-of-these-photos-can-be-found-on-my-instagram">During my free time I travel and do photography. Some of these photos can be found on my <a href="https://www.instagram.com/kasun.fernando/">instagram</a>.</h4>
+<h4 id="below-you-will-find-blog-posts-related-to-the-computational-side-of-mathematics-and-statistics-based-on-python-julia-or-r-work-in-progress">Below, you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R (work in progress).</h4>
 <p><br /></p>
-<h4 id="blog-posts"><strong>Blog Posts</strong></h4>
+
 
 
 
