--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 layout: home
 search_exclude: true
 ---
-<img align="center" src="images/kasun.jpg"> 
 
-#### I am a Mathematician, a Math Educator, and a Data Science & Machine Learning Enthusiast. I am currently a junior visitor at the Centro di Ricerca Matematica Ennio De Giorgi, Scuola Normale Superiore di Pisa. I completed my Ph.D. in Mathematics at the University of Maryland under the supervision of Dmitry Dolgopyat in August 2018 and was a postdoctoral fellow at the University of Toronto until July 2021.      
+<img class="center" src="images/kasun.jpg"> 
+
+#### I am a Mathematician, a Math Educator, and a Data Science & Machine Learning Enthusiast. I am currently a junior visitor in Dynamical Systems at the Centro di Ricerca Matematica Ennio De Giorgi, Scuola Normale Superiore di Pisa in Italy. I completed my Ph.D. in Mathematics at the University of Maryland under the supervision of Dmitry Dolgopyat in August 2018 and was a postdoctoral fellow at the University of Toronto until July 2021.      
 
 #### [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV and for my Linkedin profile, please follow [this link](https://www.linkedin.com/in/abkfernando/). 
 
