deploy: 80cd176b718196119d54258023aa8acbaa5fc0c8

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img align="center" src="images/kasun.jpg" /></p>
+        <div class="home"><p><img class="center" src="images/kasun.jpg" /></p>
 
-<h4 id="i-am-a-mathematician-a-math-educator-and-a-data-science--machine-learning-enthusiast-i-am-currently-a-junior-visitor-at-the-centro-di-ricerca-matematica-ennio-de-giorgi-scuola-normale-superiore-di-pisa-i-completed-my-phd-in-mathematics-at-the-university-of-maryland-under-the-supervision-of-dmitry-dolgopyat-in-august-2018-and-was-a-postdoctoral-fellow-at-the-university-of-toronto-until-july-2021">I am a Mathematician, a Math Educator, and a Data Science &amp; Machine Learning Enthusiast. I am currently a junior visitor at the Centro di Ricerca Matematica Ennio De Giorgi, Scuola Normale Superiore di Pisa. I completed my Ph.D. in Mathematics at the University of Maryland under the supervision of Dmitry Dolgopyat in August 2018 and was a postdoctoral fellow at the University of Toronto until July 2021.</h4>
+<h4 id="i-am-a-mathematician-a-math-educator-and-a-data-science--machine-learning-enthusiast-i-am-currently-a-junior-visitor-in-dynamical-systems-at-the-centro-di-ricerca-matematica-ennio-de-giorgi-scuola-normale-superiore-di-pisa-in-italy-i-completed-my-phd-in-mathematics-at-the-university-of-maryland-under-the-supervision-of-dmitry-dolgopyat-in-august-2018-and-was-a-postdoctoral-fellow-at-the-university-of-toronto-until-july-2021">I am a Mathematician, a Math Educator, and a Data Science &amp; Machine Learning Enthusiast. I am currently a junior visitor in Dynamical Systems at the Centro di Ricerca Matematica Ennio De Giorgi, Scuola Normale Superiore di Pisa in Italy. I completed my Ph.D. in Mathematics at the University of Maryland under the supervision of Dmitry Dolgopyat in August 2018 and was a postdoctoral fellow at the University of Toronto until July 2021.</h4>
 
 <h4 id="here-is-my-complete-cv-and-for-my-linkedin-profile-please-follow-this-link"><a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV and for my Linkedin profile, please follow <a href="https://www.linkedin.com/in/abkfernando/">this link</a>.</h4>
 
