--- a/index.html
+++ b/index.html
@@ -2,15 +2,6 @@
 layout: home
 search_exclude: true
 ---
+![]({{ site.baseurl }}/images/kasun.jpg)
 
-<img class="center" src="images/kasun.jpg"> 
-
-#### I am a Mathematician, a Math Educator, and a Data Science & Machine Learning Enthusiast. I am currently a junior visitor in Dynamical Systems at the Centro di Ricerca Matematica Ennio De Giorgi, Scuola Normale Superiore di Pisa in Italy. I completed my Ph.D. in Mathematics at the University of Maryland under the supervision of Dmitry Dolgopyat in August 2018 and was a postdoctoral fellow at the University of Toronto until July 2021.      
-
-#### [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV and for my Linkedin profile, please follow [this link](https://www.linkedin.com/in/abkfernando/). 
-
-#### During my free time, I like to travel and do photography. Some of these photos can be found on my [instagram](https://www.instagram.com/kasun.fernando/).
-
-#### Below, you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R (work in progress). 
-<br>
-
+#### I am a mathematician, math educator, and a machine learning & data science enthusiast. Currently, I am a junior visitor in Dynamical Systems at the Centro di Ricerca Matematica Ennio De Giorgi, Scuola Normale Superiore di Pisa in Italy. I completed my PhD in Mathematics at the University of Maryland under the supervision of [Dmitry Dolgopyat](https://www.math.umd.edu/~dolgop/) in August 2018 with a [dissertation](https://drum.lib.umd.edu/handle/1903/21402) on "Higher Order Asymptotics for the Central Limit Theorem and Large Deviation Principles". From August 2018 to July 2021, I was a postdoctoral fellow at the University of Toronto where I continued my research work in Chaotic Dynamical Systems & Markov Processes and branched out into Inferential Statistics and Machine Learning.   
