--- a/index.html
+++ b/index.html
@@ -83,17 +83,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img class="center" src="images/kasun.jpg" /></p>
+        <div class="home"><p><img src="/personal-webpage/images/kasun.jpg" alt="" /></p>
 
-<h4 id="i-am-a-mathematician-a-math-educator-and-a-data-science--machine-learning-enthusiast-i-am-currently-a-junior-visitor-in-dynamical-systems-at-the-centro-di-ricerca-matematica-ennio-de-giorgi-scuola-normale-superiore-di-pisa-in-italy-i-completed-my-phd-in-mathematics-at-the-university-of-maryland-under-the-supervision-of-dmitry-dolgopyat-in-august-2018-and-was-a-postdoctoral-fellow-at-the-university-of-toronto-until-july-2021">I am a Mathematician, a Math Educator, and a Data Science &amp; Machine Learning Enthusiast. I am currently a junior visitor in Dynamical Systems at the Centro di Ricerca Matematica Ennio De Giorgi, Scuola Normale Superiore di Pisa in Italy. I completed my Ph.D. in Mathematics at the University of Maryland under the supervision of Dmitry Dolgopyat in August 2018 and was a postdoctoral fellow at the University of Toronto until July 2021.</h4>
-
-<h4 id="here-is-my-complete-cv-and-for-my-linkedin-profile-please-follow-this-link"><a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV and for my Linkedin profile, please follow <a href="https://www.linkedin.com/in/abkfernando/">this link</a>.</h4>
-
-<h4 id="during-my-free-time-i-like-to-travel-and-do-photography-some-of-these-photos-can-be-found-on-my-instagram">During my free time, I like to travel and do photography. Some of these photos can be found on my <a href="https://www.instagram.com/kasun.fernando/">instagram</a>.</h4>
-
-<h4 id="below-you-will-find-blog-posts-related-to-the-computational-side-of-mathematics-and-statistics-based-on-python-julia-or-r-work-in-progress">Below, you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R (work in progress).</h4>
-<p><br /></p>
-
+<h4 id="i-am-a-mathematician-math-educator-and-a-machine-learning--data-science-enthusiast-currently-i-am-a-junior-visitor-in-dynamical-systems-at-the-centro-di-ricerca-matematica-ennio-de-giorgi-scuola-normale-superiore-di-pisa-in-italy-i-completed-my-phd-in-mathematics-at-the-university-of-maryland-under-the-supervision-of-dmitry-dolgopyat-in-august-2018-with-a-dissertation-on-higher-order-asymptotics-for-the-central-limit-theorem-and-large-deviation-principles-from-august-2018-to-july-2021-i-was-a-postdoctoral-fellow-at-the-university-of-toronto-where-i-continued-my-research-work-in-chaotic-dynamical-systems--markov-processes-and-branched-out-into-inferential-statistics-and-machine-learning">I am a mathematician, math educator, and a machine learning &amp; data science enthusiast. Currently, I am a junior visitor in Dynamical Systems at the Centro di Ricerca Matematica Ennio De Giorgi, Scuola Normale Superiore di Pisa in Italy. I completed my PhD in Mathematics at the University of Maryland under the supervision of <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a> in August 2018 with a <a href="https://drum.lib.umd.edu/handle/1903/21402">dissertation</a> on “Higher Order Asymptotics for the Central Limit Theorem and Large Deviation Principles”. From August 2018 to July 2021, I was a postdoctoral fellow at the University of Toronto where I continued my research work in Chaotic Dynamical Systems &amp; Markov Processes and branched out into Inferential Statistics and Machine Learning.</h4>
 
 
 
