deploy: 3331ac774e8a7adc9b323b45f54ebb9bdaa27096

--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -83,7 +83,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <h3 id="youtube">Youtube</h3>
+        <div class="home">
+
+<h3 id="youtube">Youtube</h3>
 
 <p>In this day and age, social media can be used for outreach activities in an extremely effective way. Since I am passionate about popularizing higher mathematics and improving mathematics education in Sri Lanka, I welcomed the opportunities to collaborate with two Sri Lankan YouTube content creators Fadil Iqbal of <a href="https://www.youtube.com/c/IQLabs">IQ Labs</a> and Ashan Ariyawansa of <a href="https://www.youtube.com/c/NCAstronomy/">NC Astronomy</a>. The collaboration with Fadil is on-going and we plan to have casual discussions about many more advanced math topics in the future.</p>
 
@@ -95,6 +97,8 @@ window.onload = wrap_img;
 1280 x 720 is the dimensions of maxresdefault thumbnails
 -->
 
+
+</div>
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/personal-webpage/"></data>
