deploy: 6b5c8ce7d000a4ed4e470af5da320c43a5e75033

--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -104,7 +104,9 @@ window.onload = wrap_img;
 
 <p>In this day and age, social media can be used for outreach activities in an extremely effective way. Since I am passionate about popularizing higher mathematics and improving mathematics education in Sri Lanka, I welcomed the opportunities to collaborate with two Sri Lankan YouTube content creators Fadil Iqbal of <a href="https://www.youtube.com/c/IQLabs">IQ Labs</a> and Ashan Ariyawansa of <a href="https://www.youtube.com/c/NCAstronomy/">NC Astronomy</a>. The collaboration with Fadil is on-going and we plan to have casual discussions about many more advanced math topics in the future.</p>
 
-<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=GBrp8-JGOQw" target="_blank"><img align="left" src="https://img.youtube.com/vi/GBrp8-JGOQw/maxresdefault.jpg" title="අතාත්වික සංඛ්‍යා වල ඉතිහාසය - The History of Complex Numbers" width="384" height="216" hspace="20" vspace="20" /></a>  <a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=tCJ-_bU4BS0" target="_blank"><img align="right" src="https://img.youtube.com/vi/tCJ-_bU4BS0/maxresdefault.jpg" title="විද්‍යාඥයෙක් වෙන්නෙ කොහොමද? - How to Become a Scientist?" width="384" height="216" hspace="20" vspace="20" /></a></p>
+<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=GBrp8-JGOQw" target="_blank"><img align="left" src="https://img.youtube.com/vi/GBrp8-JGOQw/maxresdefault.jpg" title="අතාත්වික සංඛ්‍යා වල ඉතිහාසය - The History of Complex Numbers" width="384" height="216" hspace="20" vspace="20" /></a></p>
+
+<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=tCJ-_bU4BS0" target="_blank"><img align="right" src="https://img.youtube.com/vi/tCJ-_bU4BS0/maxresdefault.jpg" title="විද්‍යාඥයෙක් වෙන්නෙ කොහොමද? - How to Become a Scientist?" width="384" height="216" hspace="20" vspace="20" /></a></p>
 
 <!---
 <iframe style="display: inline-block;" width="320" height="180" src="https://www.youtube.com/embed/tCJ-_bU4BS0" frameborder="0" allowfullscreen></iframe>
