--- a/Publications/index.html
+++ b/Publications/index.html
@@ -98,7 +98,7 @@ window.onload = wrap_img;
     <p>Here is a list of completed research articles along with their their abstracts. Don’t hesitate to write to me if you don’t have access to the published articles.</p>
 
 <ul>
-  <li><a href="otherfiles/EdgeManyAtoms.pdf">&lt;h4&gt;<em>An error term in the Central Limit Theorem for sums of discrete random variables.</em>&lt;/h4&gt;</a>
+  <li><a href="otherfiles/EdgeManyAtoms.pdf"><em>An error term in the Central Limit Theorem for sums of discrete random variables.</em></a>
     <h4 id="we-consider-sums-of-independent-identically-distributed-random-variables-those-distributions-have-d1-atoms-such-distributions-never-admit-an-edgeworth-expansion-of-order-d-but-we-show-that-for-almost-all-parameters-the-edgeworth-expansion-of-order-d-1-is-valid-and-the-error-of-the-order-d-1-edgeworth-expansion-is-typically-of-order-n-d2">We consider sums of independent identically distributed random variables those distributions have $d+1$ atoms. Such distributions never admit an Edgeworth expansion of order $d$ but we show that for almost all parameters the Edgeworth expansion of order $d-1$ is valid and the error of the order $d-1$ Edgeworth expansion is typically of order $n^{-d/2}$.</h4>
   </li>
 </ul>
