--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 layout: home
 search_exclude: true
 ---
-![]({{ site.baseurl }}/images/kasun.jpg)
+<img align="right" src="images/kasun.jpg" hspace="20" vspace="20"/>
 
-### I am a mathematician, math educator, and a machine learning & data science enthusiast. 
+### **I am a mathematician, math educator, and a machine learning & data science enthusiast**. 
 
-### Currently, I am a junior visitor in Dynamical Systems at the [Centro di Ricerca Matematica Ennio De Giorgi](http://www.crm.sns.it/), Scuola Normale Superiore di Pisa in Italy. I completed my PhD in Mathematics at the University of Maryland under the supervision of [Dmitry Dolgopyat](https://www.math.umd.edu/~dolgop/) in August 2018 with the [dissertation](https://drum.lib.umd.edu/handle/1903/21402): "Higher Order Asymptotics for the Central Limit Theorem and Large Deviation Principles". Afterwards, from August 2018 to July 2021, I was a postdoctoral fellow at the University of Toronto where I continued my [research](https://kasun-fernando.github.io/personal-webpage/Research/) work in chaotic dynamical systems & stochastic processes, and branched out into inferential statistics & machine learning.   
+### Currently, I am a *Junior Visitor in Dynamical Systems* at the [Centro di Ricerca Matematica Ennio De Giorgi](http://www.crm.sns.it/), Scuola Normale Superiore di Pisa in Italy. 
 
-### Apart from research, I believe in the need of disseminating mathematical knowledge to future generations. Due to my commitment to [teaching](https://kasun-fernando.github.io/personal-webpage/Teaching/), in 2020, I won the __Award for Teaching Excellence by a Junior Member__ of the Mathematics Department, Univrsity of Toronto. Also, since the beginning of my undergraduate studies, I have been involved in numerous [outreach and community involvement](https://kasun-fernando.github.io/personal-webpage/Outreach/) projects with the hope of popularizing mathematics among the general public and promoting diversity in STEM fields.   
+### I completed my PhD in Mathematics at the University of Maryland under the supervision of [Dmitry Dolgopyat](https://www.math.umd.edu/~dolgop/) in August 2018 with the [dissertation](https://drum.lib.umd.edu/handle/1903/21402): *Higher Order Asymptotics for the Central Limit Theorem and Large Deviation Principles*. Afterwards, from August 2018 to July 2021, I was a postdoctoral fellow at the University of Toronto where I continued my [*research*](https://kasun-fernando.github.io/personal-webpage/Research/) work in *chaotic dynamical systems* & *stochastic processes*, and branched out into *inferential statistics* & *machine learning*. 
 
-### [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV.  
+### Apart from research, I believe in the need of disseminating mathematical knowledge to future generations. Due to my commitment to [*teaching*](https://kasun-fernando.github.io/personal-webpage/Teaching/), in 2020, I won the *Award for Teaching Excellence by a Junior Member* of the Mathematics Department, Univrsity of Toronto. Also, since the beginning of my undergraduate studies, I have been involved in numerous [*outreach*](https://kasun-fernando.github.io/personal-webpage/Outreach/) projects with the hope of popularizing mathematics among the general public and promoting diversity in STEM fields.   
+
+### [*Here*](otherfiles/KasunFernandoCV.pdf) is my complete CV.  
 
 ### During my free time, I like to travel and do photography. Some of these photos can be found on my [instagram](https://www.instagram.com/kasun.fernando/).
-
