--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: home
 search_exclude: true
 ---
-<img align="right" src="images/kasun.jpg" hspace="20" vspace="20"/>
+<div style="text-align: justify">
+<img align="right" src="images/kasun.jpg" hspace="40" vspace="20"/>
 
 ### **I am a mathematician, math educator, and a machine learning & data science enthusiast**. 
 
@@ -14,4 +15,6 @@ search_exclude: true
 
 ### [*Here*](otherfiles/KasunFernandoCV.pdf) is my complete CV.  
 
-### During my free time, I like to travel and do photography. Some of these photos can be found on my [instagram](https://www.instagram.com/kasun.fernando/).
+### During my free time, I like to travel and do photography. Some of these photos can be found on my [instagram](https://www.instagram.com/kasun.fernando/).   
+
+</div>
