--- a/index.html
+++ b/index.html
@@ -83,22 +83,20 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><div style="text-align: justify">
-<img align="right" src="images/kasun.jpg" hspace="40" vspace="20" />
+        <div class="home"><p><img align="right" src="images/kasun.jpg" hspace="40" vspace="20" /></p>
 
-### **I am a mathematician, math educator, and a machine learning &amp; data science enthusiast**. 
+<h3 id="i-am-a-mathematician-math-educator-and-a-machine-learning--data-science-enthusiast"><strong>I am a mathematician, math educator, and a machine learning &amp; data science enthusiast</strong>.</h3>
 
-### Currently, I am a *Junior Visitor in Dynamical Systems* at the [Centro di Ricerca Matematica Ennio De Giorgi](http://www.crm.sns.it/), Scuola Normale Superiore di Pisa in Italy. 
+<h3 id="currently-i-am-a-junior-visitor-in-dynamical-systems-at-the-centro-di-ricerca-matematica-ennio-de-giorgi-scuola-normale-superiore-di-pisa-in-italy">Currently, I am a <em>Junior Visitor in Dynamical Systems</em> at the <a href="http://www.crm.sns.it/">Centro di Ricerca Matematica Ennio De Giorgi</a>, Scuola Normale Superiore di Pisa in Italy.</h3>
 
-### I completed my PhD in Mathematics at the University of Maryland under the supervision of [Dmitry Dolgopyat](https://www.math.umd.edu/~dolgop/) in August 2018 with the [dissertation](https://drum.lib.umd.edu/handle/1903/21402): *Higher Order Asymptotics for the Central Limit Theorem and Large Deviation Principles*. Afterwards, from August 2018 to July 2021, I was a postdoctoral fellow at the University of Toronto where I continued my [*research*](https://kasun-fernando.github.io/personal-webpage/Research/) work in *chaotic dynamical systems* &amp; *stochastic processes*, and branched out into *inferential statistics* &amp; *machine learning*. 
+<h3 id="i-completed-my-phd-in-mathematics-at-the-university-of-maryland-under-the-supervision-of-dmitry-dolgopyat-in-august-2018-with-the-dissertation-higher-order-asymptotics-for-the-central-limit-theorem-and-large-deviation-principles-afterwards-from-august-2018-to-july-2021-i-was-a-postdoctoral-fellow-at-the-university-of-toronto-where-i-continued-my-research-work-in-chaotic-dynamical-systems--stochastic-processes-and-branched-out-into-inferential-statistics--machine-learning">I completed my PhD in Mathematics at the University of Maryland under the supervision of <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a> in August 2018 with the <a href="https://drum.lib.umd.edu/handle/1903/21402">dissertation</a>: <em>Higher Order Asymptotics for the Central Limit Theorem and Large Deviation Principles</em>. Afterwards, from August 2018 to July 2021, I was a postdoctoral fellow at the University of Toronto where I continued my <a href="https://kasun-fernando.github.io/personal-webpage/Research/"><em>research</em></a> work in <em>chaotic dynamical systems</em> &amp; <em>stochastic processes</em>, and branched out into <em>inferential statistics</em> &amp; <em>machine learning</em>.</h3>
 
-### Apart from research, I believe in the need of disseminating mathematical knowledge to future generations. Due to my commitment to [*teaching*](https://kasun-fernando.github.io/personal-webpage/Teaching/), in 2020, I won the *Award for Teaching Excellence by a Junior Member* of the Mathematics Department, Univrsity of Toronto. Also, since the beginning of my undergraduate studies, I have been involved in numerous [*outreach*](https://kasun-fernando.github.io/personal-webpage/Outreach/) projects with the hope of popularizing mathematics among the general public and promoting diversity in STEM fields.   
+<h3 id="apart-from-research-i-believe-in-the-need-of-disseminating-mathematical-knowledge-to-future-generations-due-to-my-commitment-to-teaching-in-2020-i-won-the-award-for-teaching-excellence-by-a-junior-member-of-the-mathematics-department-univrsity-of-toronto-also-since-the-beginning-of-my-undergraduate-studies-i-have-been-involved-in-numerous-outreach-projects-with-the-hope-of-popularizing-mathematics-among-the-general-public-and-promoting-diversity-in-stem-fields">Apart from research, I believe in the need of disseminating mathematical knowledge to future generations. Due to my commitment to <a href="https://kasun-fernando.github.io/personal-webpage/Teaching/"><em>teaching</em></a>, in 2020, I won the <em>Award for Teaching Excellence by a Junior Member</em> of the Mathematics Department, Univrsity of Toronto. Also, since the beginning of my undergraduate studies, I have been involved in numerous <a href="https://kasun-fernando.github.io/personal-webpage/Outreach/"><em>outreach</em></a> projects with the hope of popularizing mathematics among the general public and promoting diversity in STEM fields.</h3>
 
-### [*Here*](otherfiles/KasunFernandoCV.pdf) is my complete CV.  
+<h3 id="here-is-my-complete-cv"><a href="otherfiles/KasunFernandoCV.pdf"><em>Here</em></a> is my complete CV.</h3>
 
-### During my free time, I like to travel and do photography. Some of these photos can be found on my [instagram](https://www.instagram.com/kasun.fernando/).   
+<h3 id="during-my-free-time-i-like-to-travel-and-do-photography-some-of-these-photos-can-be-found-on-my-instagram">During my free time, I like to travel and do photography. Some of these photos can be found on my <a href="https://www.instagram.com/kasun.fernando/">instagram</a>.</h3>
 
-</div>
 
 
 
