--- a/Publications/index.html
+++ b/Publications/index.html
@@ -104,46 +104,40 @@ with Dmitry Dolgopyat, 42 pp (revisions submitted)<br /></li>
 <font size="3">We consider sums of independent identically distributed random variables those distributions have $d+1$ atoms. Such distributions never admit an Edgeworth expansion of order $d$ but we show that for almost all parameters the Edgeworth expansion of order $d-1$ is valid and the error of the order $d-1$ Edgeworth expansion is typically of order $n^{-d/2}$.</font>
 
 <ul>
-  <li><a href="https://arxiv.org/abs/2108.08461"><em>The Bootstrap for dynamical systems</em></a></li>
+  <li><a href="https://arxiv.org/abs/2108.08461"><em>The Bootstrap for dynamical systems</em></a><br />
+with Nan Zou, 69 pp (submitted)</li>
 </ul>
 <font size="3">Despite their deterministic nature, dynamical systems often exhibit seemingly random behaviour. Consequently, a dynamical system is usually represented by a probabilistic model of which the unknown parameters must be estimated using statistical methods. When measuring the uncertainty of such parameter estimation, the bootstrap stands out as a simple but powerful technique. In this paper, we develop the bootstrap for dynamical systems and establish not only its consistency but also its second-order efficiency via a novel continuous Edgeworth expansion for dynamical systems. Moreover, we verify the theoretical results about the bootstrap using computer simulations.</font>
 
-<p>with Nan Zou, 69 pp (submitted)<br /></p>
-
 <ul>
-  <li><a href="https://arxiv.org/abs/2102.03509"><em>Robust normalizing flows using Bernstein-type polynomials.</em></a></li>
+  <li><a href="https://arxiv.org/abs/2102.03509"><em>Robust normalizing flows using Bernstein-type polynomials.</em></a><br />
+with Sameera Ramasinghe, 15 pp (submitted)</li>
 </ul>
 <font size="3">Normalizing flows (NFs) are a class of generative models that allows exact density evaluation and sampling. We propose a framework to construct NFs based on increasing triangular maps and Bernstein-type polynomials. Compared to the existing (universal) NF frameworks, our method provides compelling advantages like theoretical upper bounds for the approximation error, robustness, higher interpretability, suitability for compactly supported densities, and the ability to employ higher degree polynomials without training instability. Moreover, we provide a constructive universality proof, which gives analytic expressions of the approximations for known transformations. We conduct a thorough theoretical analysis and empirically demonstrate the efficacy of the proposed technique using experiments on both real-world and synthetic datasets.</font>
 
-<p>with Sameera Ramasinghe, 15 pp (submitted)<br /></p>
-
 <ul>
-  <li><a href="https://arxiv.org/pdf/2008.08726.pdf"><em>Expansions in the Central and the Local Limit Theorems for Dynamical Systems.</em></a></li>
-</ul>
-<font size="3">We study higher order expansions both in the Berry-Ess&amp;een estimate (Edgeworth expansions) and in the local limit theorems for Birkhoff sums of chaotic probability preserving dynamical systems. We establish general results under technical assumptions, discuss the verification of these assumptions and illustrate our results by different examples (subshifts of finite type, Young towers, Sinai billiards, random matrix products), including situations of unbounded observables with integrability order arbitrarily close to the optimal moment condition required in the i.i.d. setting.</font>
-
-<p>with Françoise Pène <br /> Communications in Mathematical Physics 389, 273–347, 75 pp (2022) doi:10.1007/s00220-021-04255-z <br /></p>
-
-<ul>
-  <li><a href="https://arxiv.org/abs/1803.07667"><em>Edgeworth expansions for weakly dependent random variables.</em></a></li>
+  <li>
+    <p><a href="https://arxiv.org/pdf/2008.08726.pdf"><em>Expansions in the Central and the Local Limit Theorems for Dynamical Systems.</em></a><br />
+with Françoise Pène <br /> Communications in Mathematical Physics 389, 273–347, 75 pp (2022) doi:10.1007/s00220-021-04255-z                                 <font size="3">We study higher order expansions both in the Berry-Ess&amp;een estimate (Edgeworth expansions) and in the local limit theorems for Birkhoff sums of chaotic probability preserving dynamical systems. We establish general results under technical assumptions, discuss the verification of these assumptions and illustrate our results by different examples (subshifts of finite type, Young towers, Sinai billiards, random matrix products), including situations of unbounded observables with integrability order arbitrarily close to the optimal moment condition required in the i.i.d. setting.</font></p>
+  </li>
+  <li>
+    <p><a href="https://arxiv.org/abs/1803.07667"><em>Edgeworth expansions for weakly dependent random variables.</em></a><br />
+with Carlangelo Liverani <br /> Annales de l’Institut Henri Poincaré, 57(1) (2021) 469-505, 37 pp: doi:10.1214/20-AIHP1085</p>
+  </li>
 </ul>
 <font size="3">We discuss sufficient conditions that guarantee the existence of asymptotic expansions for the CLT for weakly dependent random variables including observations arising from sufficiently chaotic dynamical systems like piece-wise expanding maps and strongly ergodic Markov chains. We primarily use spectral techniques to obtain the results.</font>
 
-<p>with Carlangelo Liverani <br /> Annales de l’Institut Henri Poincaré, 57(1) (2021) 469-505, 37 pp: doi:10.1214/20-AIHP1085 <br /></p>
-
 <ul>
-  <li><a href="https://arxiv.org/abs/1907.11655"><em>Higher order asymptotics for large deviations - Part II.</em></a></li>
+  <li><a href="https://arxiv.org/abs/1907.11655"><em>Higher order asymptotics for large deviations - Part II.</em></a><br />
+with Pratima Hebbar<br /> Stochastics and Dynamics, 21(5) (2021) 21 pp: doi:10.1142/S0219493721500258</li>
 </ul>
 <font size="3">We obtain asymptotic expansions for the large deviation principle (LDP) for continuous time stochastic processes with weakly dependent increments. As a key example, we show that additive functionals of solutions of stochastic differential equations (SDEs) satisfying H&ouml;rmander condition on a <i>d</i>-dimensional compact manifold admit these asymptotic expansions of all orders.</font>
 
-<p>with Pratima Hebbar<br /> Stochastics and Dynamics, 21(5) (2021) 21 pp: doi:10.1142/S0219493721500258 <br /></p>
-
 <ul>
-  <li><a href="https://arxiv.org/abs/1811.06793"><em>Higher order asymptotics for large deviations - Part I.</em></a></li>
+  <li><a href="https://arxiv.org/abs/1811.06793"><em>Higher order asymptotics for large deviations - Part I.</em></a><br />
+with Pratima Hebbar <br /> Asymptotic Analysis, 121 (2021) 219–257, 39 pp: doi:10.3233/ASY-201602</li>
 </ul>
 <font size="3">For sequences of non-lattice weakly dependent random variables, we obtain asymptotic expansions for Large Deviation Principles. These expansions, commonly referred to as strong large deviation results, are in the spirit of Edgeworth Expansions for the Central Limit Theorem. We apply our results to show that Diophantine iid sequences, finite state Markov chains, strongly ergodic Markov chains and Birkhoff sums of smooth expanding maps &amp; subshifts of finite type satisfy these strong large deviation results.</font>
-
-<p>with Pratima Hebbar <br /> Asymptotic Analysis, 121 (2021) 219–257, 39 pp: doi:10.3233/ASY-201602 <br /></p>
 
 
   </div><a class="u-url" href="/personal-webpage/Publications/" hidden></a>
