deploy: e96e2841d97f9f29fac2acd7c99de0f669033418

--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -97,6 +97,10 @@ window.onload = wrap_img;
   <div class="post-content e-content" itemprop="articleBody">
     <h3 id="the-fields-institute--the-fields-academy">The Fields Institute &amp; the Fields Academy</h3>
 
+<p><a href="http://www.fields.utoronto.ca/">The Fields Institute</a> is one key organization in Canada providing support for mathematical research as well as education. Since the beginning of my postdoctoral work at the University of Toronto (UofT), I have contributed to the <a href="http://www.fields.utoronto.ca/activities/seminars/math-circles">Math Circles</a> which is an extracurricular high school enriched-level mathematics club.</p>
+
+<p>Currently, I am collaborating with Pamela Brittain at <a href="https://fieldsacademy.ca/">The Fields Academy</a> to develop <em>Fields Elementary Educator Courses</em> to help elementary teachers and teacher candidates boost their math skills, and also, contributing to the <em>The Ask a Mathematician program</em> which brings mathematicians into school classroom virtually with the hope of inspiring students to see mathematics in a whole new way.</p>
+
 <h3 id="the-outreach-office--math-department-of-mathematics-univeristy-of-toronto">The Outreach Office &amp; Math+, Department of Mathematics, Univeristy of Toronto</h3>
 
 <p>The Math Outreach Office at UofT is established with the goal of providing great programs and resources for school students, parents, and teachers, as well as the general public with the hope of popularizing mathematics in Canada.  During the last four years, I was involved in outreach programmes organized by the <a href="http://mathplus.math.utoronto.ca/">Math Outreach Office</a> at the University of Toronto inclduing the Canadian Open Mathematics Challenge (COMC).</p>
