deploy: e64de740c91e64fcf1ac1e4df6a9eada2b9e1275

--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -95,11 +95,13 @@ window.onload = wrap_img;
     </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    <h3 id="the-fields-institute--the-fields-academy">The Fields Institute &amp; the Fields Academy</h3>
+    <p>Since I am part of the visible minority, through my lived experiences, I have understood the importance of role models, visibility and also, the availability of opportunities during school and further education. This is why I was involved in outreach and diversity promotion activities since the beginning of my undergraduate studies. Below, I have listed four key avenues through which I have made contributions. I plan to continue my community involvement as a mathematician and an educator in the future.</p>
 
-<p><a href="http://www.fields.utoronto.ca/">The Fields Institute</a> is one key organization in Canada providing support for mathematical research as well as education. Since the beginning of my postdoctoral work at the University of Toronto (UofT), I have contributed to the <a href="http://www.fields.utoronto.ca/activities/seminars/math-circles">Math Circles</a> which is an extracurricular high school enriched-level mathematics club.</p>
+<h3 id="the-fields-institute--the-fields-academy">The Fields Institute &amp; the Fields Academy</h3>
 
-<p>Currently, I am collaborating with Pamela Brittain at <a href="https://fieldsacademy.ca/">The Fields Academy</a> to develop <em>Fields Elementary Educator Courses</em> to help elementary teachers and teacher candidates boost their math skills, and also, contributing to the <em>The Ask a Mathematician program</em> which brings mathematicians into school classroom virtually with the hope of inspiring students to see mathematics in a whole new way.</p>
+<p><a href="http://www.fields.utoronto.ca/">The Fields Institute</a> is one key organization in Canada providing support for mathematical research as well as education. Since the beginning of my postdoctoral work at the University of Toronto (UofT), I have contributed to the <a href="http://www.fields.utoronto.ca/activities/seminars/math-circles">Math Circles</a> at the Fields Institute. It is an extracurricular high school mathematics club open to all school students who want to learn mathematics beyond the school curriculum.</p>
+
+<p>Currently, I am collaborating with Pamela Brittain at <a href="https://fieldsacademy.ca/">The Fields Academy</a> to develop <em>Fields Elementary Educator Courses</em> to help elementary teachers improve their math skills, and also, I am contributing to the <em>The Ask a Mathematician program</em> at the academy. It brings mathematicians into school classrooms virtually with the hope of inspiring school students to perceive and approach math in a different way.</p>
 
 <h3 id="the-outreach-office--math-department-of-mathematics-univeristy-of-toronto">The Outreach Office &amp; Math+, Department of Mathematics, Univeristy of Toronto</h3>
 
