deploy: 7454702ec3ce2cf197c490ee182a727676bce706

--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -103,7 +103,7 @@ window.onload = wrap_img;
 
 <p>Currently, I am collaborating with Pamela Brittain at <a href="https://fieldsacademy.ca/">The Fields Academy</a> to develop <em>Fields Elementary Educator Courses</em> to help elementary teachers improve their math skills, and also, I am contributing to the <em>The Ask a Mathematician program</em> at the academy. It brings mathematicians into school classrooms virtually with the hope of inspiring school students to perceive and approach math in a different way.</p>
 
-<h3 id="the-outreach-office--math-department-of-mathematics-univeristy-of-toronto">The Outreach Office &amp; Math+, Department of Mathematics, Univeristy of Toronto</h3>
+<h3 id="the-outreach-office--math-department-of-mathematics-uoft">The Outreach Office &amp; Math+, Department of Mathematics, UofT</h3>
 
 <p>The Math Outreach Office at UofT is established with the goal of providing great programs and resources for school students, parents, and teachers, as well as the general public with the hope of popularizing mathematics in Canada.  During the last four years, I was involved in outreach programmes organized by the <a href="http://mathplus.math.utoronto.ca/">Math Outreach Office</a> at the University of Toronto inclduing the Canadian Open Mathematics Challenge (COMC).</p>
 
