deploy: b0f8e26276f66d3486e87c6761bb515561c99ee3

--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -101,7 +101,7 @@ window.onload = wrap_img;
 
 <p><a href="http://www.fields.utoronto.ca/">The Fields Institute</a> is one key organization in Canada providing support for mathematical research as well as education. Since the beginning of my postdoctoral work at the University of Toronto (UofT), I have contributed to the <a href="http://www.fields.utoronto.ca/activities/seminars/math-circles">Math Circles</a> at the Fields Institute. It is an extracurricular high school mathematics club open to all school students who want to learn mathematics beyond the school curriculum.</p>
 
-<p>Currently, I am collaborating with Pamela Brittain at <a href="https://fieldsacademy.ca/">The Fields Academy</a> to develop <em>Fields Elementary Educator Courses</em> to help elementary teachers improve their math skills, and also, I am contributing to the <em>The Ask a Mathematician program</em> at the academy. It brings mathematicians into school classrooms virtually with the hope of inspiring school students to perceive and approach math in a different way.</p>
+<p>Currently, I am collaborating with Pamela Brittain at <a href="https://fieldsacademy.ca/">The Fields Academy</a> to develop <em>Fields Elementary Educator Courses</em> to help elementary teachers improve their math skills, and also, I am contributing to the <em>Ask a Mathematician program</em> at the academy. The latter brings mathematicians into school classrooms virtually with the hope of inspiring school students to perceive and approach math in a different way.</p>
 
 <h3 id="the-outreach-office--math-department-of-mathematics-uoft">The Outreach Office &amp; Math+, Department of Mathematics, UofT</h3>
 
