deploy: 2d3a64d16872979a5e64ff59dcf59c8a36ece08f

--- a/Publications/index.html
+++ b/Publications/index.html
@@ -101,9 +101,11 @@ window.onload = wrap_img;
   <li><a href="otherfiles/EdgeManyAtoms.pdf"><em>An error term in the Central Limit Theorem for sums of discrete random variables.</em></a></li>
 </ul>
 <font size="3">with Dmitry Dolgopyat, 42 pp (revisions submitted)</font>
-<blockquote>
-  <p>! Abstract &lt;p align="justify"&gt;<font size="2">We consider sums of independent identically distributed random variables those distributions have $d+1$ atoms. Such distributions never admit an Edgeworth expansion of order $d$ but we show that for almost all parameters the Edgeworth expansion of order $d-1$ is valid and the error of the order $d-1$ Edgeworth expansion is typically of order $n^{-d/2}$.</font>&lt;/p&gt;</p>
-</blockquote>
+<details>
+<summary>Abstract</summary>     
+  
+<font size="2">We consider sums of independent identically distributed random variables those distributions have $d+1$ atoms. Such distributions never admit an Edgeworth expansion of order $d$ but we show that for almost all parameters the Edgeworth expansion of order $d-1$ is valid and the error of the order $d-1$ Edgeworth expansion is typically of order $n^{-d/2}$.</font> 
+</details>
 
 <ul>
   <li><a href="https://arxiv.org/abs/2108.08461"><em>The Bootstrap for dynamical systems</em></a></li>
