--- a/Publications/index.html
+++ b/Publications/index.html
@@ -95,7 +95,9 @@ window.onload = wrap_img;
     </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    <h2 id="here-is-a-list-of-completed-research-articles-along-with-their-their-abstracts-dont-hesitate-to-write-to-me-if-you-dont-have-access-to-the-published-articles">Here is a list of completed research articles along with their their abstracts. Don’t hesitate to write to me if you don’t have access to the published articles.<br /></h2>
+    <p>Here is a list of completed research articles along with their their abstracts. Don’t hesitate to write to me if you don’t have access to the published articles.<br /></p>
+
+<hr />
 <p><a href="otherfiles/EdgeManyAtoms.pdf"><em>An error term in the Central Limit Theorem for sums of discrete random variables.</em></a></p>
 <font size="3">with Dmitry Dolgopyat, 42 pp (revisions submitted)</font>
 <details>
