deploy: d899a7b258027f3ce3445ecd320fd55cb3b4f7a2

--- a/Research/index.html
+++ b/Research/index.html
@@ -95,19 +95,19 @@ window.onload = wrap_img;
     </header>
 
   <div class="post-content e-content" itemprop="articleBody">
-    <p>Broadly speaking, the prime focus of my research is the interplay between probability theory, dynamical systems and statistics. I investigate</p>
+    <p>Broadly speaking, the prime focus of my research is <b>the interplay between probability theory, dynamical systems and statistics</b>. I investigate</p>
 <ul>
-  <li>statistical properties of dynamical systems and Markov processes,</li>
-  <li>inferential statistics in the context of dynamical systems, and</li>
-  <li>higher order asymptotics for limit theorems</li>
+  <li><b>statistical properties of dynamical systems and Markov processes</b>,</li>
+  <li><b>inferential statistics in the context of dynamical systems</b>, and</li>
+  <li><b>higher order asymptotics for limit theorems</b></li>
 </ul>
 
 <p>using spectral theory and a combination of techniques from classical probability theory, stochastic analysis, statistics and dynamical systems. Recently, I have started looking at</p>
 <ul>
-  <li>applications of machine learning to solve related problems.</li>
+  <li><b>applications of machine learning</b> to problems related to previous research topics.</li>
 </ul>
 
-<p>So far, I have collaborated with and have ongoing collaborations with a diverse group of researchers based in Australia, Austria, Canada, France, Italy, and the United States. Apart from dynamicists and probabilists, I have formed research connections with statisticians and machine learning researchers, and I am actively searching for interdisciplinary research opportunities.</p>
+<p>So far, I have collaborated with and have ongoing collaborations with a diverse group of researchers based in Australia, Austria, Canada, France, Italy, and the US. Apart from dynamicists and probabilists, I have formed research connections with machine learning researchers and statisticians, and I am actively searching for interdisciplinary research opportunities.</p>
 
 <p>Below, I discuss some of my research interests grouped by major themes. I mention the motivation behind each long-term project and the collaborators I work with. The resulting publications are <a href="https://kasun-fernando.github.io/personal-webpage/Publications/">here</a>.</p>
 
