deploy: dddb034eb1a9342d90ae99d969f02ce09e2029ce

--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -111,9 +111,9 @@ window.onload = wrap_img;
 
 <p>I was also involved in the Fall Math Club series organized by the Outreach Office. In 2021, I designed and ran the Fall Math Contest Preparation Club for school students. Further, I was a speaker at the <a href="https://mu.math.toronto.edu/home/about-us/">Mathematics Union Toronto</a> seminar series to introduce research level mathematics to undergraduates, a co-trainer in the Putnam competition training sessions for undergraduates and a co-trainer for the COMC grader training sessions, all oraganized in association with the Department of Mathematics, UofT.</p>
 
-<h3 id="the-sri-lanka-olympiad-mathematics-foundations--the-ministry-of-education-sri-lanka">The Sri Lanka Olympiad Mathematics Foundations &amp; the Ministry of Education, Sri Lanka</h3>
+<h3 id="the-slomf--the-ministry-of-education-sri-lanka">The SLOMF &amp; the Ministry of Education, Sri Lanka</h3>
 
-<p><a href="https://www.facebook.com/slmathsolympiad/">The Sri Lanka Olympiad Mathematics Foundations</a> (SLOMF) is a non-profit organization initiated in 2004 by several academics with the vision of creating a culture within Sri Lanka that appreciates mathematics and produces world class mathematicians. It also works closely with the Sri Lankan Ministry of Education (MoE) to deploy programs related to mathematics education.</p>
+<p><a href="https://www.facebook.com/slmathsolympiad/">The Sri Lanka Olympiad Mathematics Foundation</a> (SLOMF) is a non-profit organization initiated in 2004 by several academics with the vision of creating a culture within Sri Lanka that appreciates mathematics and produces world class mathematicians. It also works closely with the Sri Lankan Ministry of Education (MoE) to deploy programs related to mathematics education.</p>
 
 <p>From 2009 to 2014, during my undergraduate studies, I was a key facilitator at the SLOMF and at the Mathematics Branch of the MoE. I was involved in each and every aspect of the Sri Lankan Mathematical Olympiad (SLMO) from organizing it to setting the SLMO exam papers and training the Sri Lankan students for competitions. Further, I contributed to school teacher training programs organized in collaboration with the MoE.</p>
 
